<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".validation.ValidationsActivity"
        android:padding="10dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_cadastro"
            android:textSize="22sp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:id="@+id/tvFormulario"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilNomeCompleto"
            android:layout_below="@id/tvFormulario">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietNomeCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_completo"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilProfissao"
            android:layout_below="@id/tilNomeCompleto"
            android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietProfissao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profissao"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilDate"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/tilProfissao">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_nascimento"
                android:textSize="18sp"
                android:id="@+id/tvDataNascimento"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_shape"
            android:layout_centerHorizontal="true"
            android:id="@+id/btnCadastrar"
            android:textColor="#fff"
            android:text="@string/cadastrar"
            android:layout_marginBottom="5dp"/>

</RelativeLayout>